--- a/frontend/index.html
+++ b/frontend/index.html
@@ -383,6 +383,71 @@
     border-color: #4a8fe7;
   }
 
+  /* History Section */
+  .history-panel {
+    background: #16213e;
+    border-radius: 12px;
+    padding: 16px;
+    min-width: 280px;
+    max-width: 360px;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.3);
+    border: 1px solid #0f3460;
+  }
+  .history-panel h2 {
+    font-size: 16px;
+    color: #90ee90;
+    margin-bottom: 12px;
+    border-bottom: 1px solid #0f3460;
+    padding-bottom: 8px;
+  }
+  .history-panel.hidden { display: none; }
+  .history-list { list-style: none; display: flex; flex-direction: column; gap: 10px; }
+  .history-item {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    padding: 8px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.15s;
+    border: 1px solid #0f3460;
+  }
+  .history-item:hover { background: rgba(255,255,255,0.05); }
+  .mini-grid {
+    display: grid;
+    gap: 1px;
+    flex-shrink: 0;
+  }
+  .mini-grid.mg-4 { grid-template-columns: repeat(4, 16px); grid-template-rows: repeat(4, 16px); }
+  .mini-grid.mg-5 { grid-template-columns: repeat(5, 14px); grid-template-rows: repeat(5, 14px); }
+  .mini-cell {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 8px;
+    font-weight: 700;
+    color: #2c1810;
+    background: #c8ad7f;
+    border-radius: 2px;
+  }
+  .mini-grid.mg-5 .mini-cell { font-size: 7px; }
+  .history-info {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    flex: 1;
+    min-width: 0;
+  }
+  .history-words {
+    font-size: 13px;
+    font-weight: 600;
+    color: #e0e0e0;
+  }
+  .history-date {
+    font-size: 11px;
+    color: #556;
+  }
+
   /* Scrollbar */
   .right-panel::-webkit-scrollbar { width: 6px; }
   .right-panel::-webkit-scrollbar-track { background: transparent; }
@@ -418,6 +483,10 @@
     <ul class="path-list" id="pathList">
       <li class="no-paths">No paths yet. Fill the board and click Solve.</li>
     </ul>
+  </div>
+  <div class="history-panel hidden" id="historyPanel">
+    <h2>History</h2>
+    <ul class="history-list" id="historyList"></ul>
   </div>
 </div>
 
@@ -678,6 +747,7 @@ async function solve() {
     renderPathList();
     renderSVG();
     playSuccessChime();
+    saveToHistory(grid.map(function(row) { return row.slice(); }), gridSize, paths.length);
   } catch (err) {
     showError('Solve failed: ' + err.message);
   } finally {
@@ -902,6 +972,96 @@ function updateSearchFilterVisibility() {
   }
 }
 
+// History
+var MAX_HISTORY = 3;
+
+function getHistory() {
+  try {
+    return JSON.parse(localStorage.getItem('wh_history') || '[]');
+  } catch(e) { return []; }
+}
+
+function saveToHistory(boardGrid, boardSize, wordCount) {
+  var history = getHistory();
+  var key = JSON.stringify(boardGrid);
+  // Remove duplicate if same board already exists
+  history = history.filter(function(h) { return JSON.stringify(h.grid) !== key; });
+  history.unshift({ grid: boardGrid, size: boardSize, words: wordCount, time: Date.now() });
+  if (history.length > MAX_HISTORY) history = history.slice(0, MAX_HISTORY);
+  localStorage.setItem('wh_history', JSON.stringify(history));
+  renderHistory();
+}
+
+function renderHistory() {
+  var panel = document.getElementById('historyPanel');
+  var list = document.getElementById('historyList');
+  var history = getHistory();
+  if (history.length === 0) {
+    panel.classList.add('hidden');
+    return;
+  }
+  panel.classList.remove('hidden');
+  list.innerHTML = '';
+  history.forEach(function(entry, idx) {
+    var li = document.createElement('li');
+    li.className = 'history-item';
+    (function(e) {
+      li.addEventListener('click', function() { restoreFromHistory(e); });
+    })(entry);
+
+    // Mini grid preview
+    var miniGrid = document.createElement('div');
+    miniGrid.className = 'mini-grid mg-' + entry.size;
+    for (var r = 0; r < entry.size; r++) {
+      for (var c = 0; c < entry.size; c++) {
+        var cell = document.createElement('div');
+        cell.className = 'mini-cell';
+        cell.textContent = (entry.grid[r] && entry.grid[r][c]) || '';
+        miniGrid.appendChild(cell);
+      }
+    }
+
+    // Info
+    var info = document.createElement('div');
+    info.className = 'history-info';
+    var wordsSpan = document.createElement('span');
+    wordsSpan.className = 'history-words';
+    wordsSpan.textContent = entry.words + ' words \u00b7 ' + entry.size + '\u00d7' + entry.size;
+    var dateSpan = document.createElement('span');
+    dateSpan.className = 'history-date';
+    dateSpan.textContent = formatHistoryTime(entry.time);
+    info.appendChild(wordsSpan);
+    info.appendChild(dateSpan);
+
+    li.appendChild(miniGrid);
+    li.appendChild(info);
+    list.appendChild(li);
+  });
+}
+
+function formatHistoryTime(ts) {
+  var d = new Date(ts);
+  var now = new Date();
+  var diff = now - d;
+  if (diff < 60000) return 'Just now';
+  if (diff < 3600000) return Math.floor(diff / 60000) + 'm ago';
+  if (diff < 86400000) return Math.floor(diff / 3600000) + 'h ago';
+  return d.toLocaleDateString();
+}
+
+function restoreFromHistory(entry) {
+  gridSize = entry.size;
+  grid = entry.grid.map(function(row) { return row.slice(); });
+  document.querySelectorAll('.btn-size').forEach(function(b) {
+    b.classList.toggle('active', parseInt(b.dataset.size) === gridSize);
+  });
+  selectedRow = -1;
+  selectedCol = -1;
+  clearPaths();
+  renderBoard();
+  saveState();
+}
+
 // Rerender SVG on resize
 window.addEventListener('resize', function() { renderSVG(); });
 
@@ -925,6 +1085,7 @@ window.addEventListener('resize', function() { renderSVG(); });
   }
   initGrid();
 })();
+renderHistory();
 </script>
 </body>
 </html>
