add words and remove reverse paths

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,12 @@
       <li class="no-paths">No paths yet. Fill the board and click Solve.</li>
     </ul>
   </div>
+  <div class="words-panel hidden" id="wordsPanel">
+    <h2>Found Words</h2>
+    <ul class="word-list" id="wordList">
+      <li class="no-paths">No words found yet.</li>
+    </ul>
+  </div>
   <div class="history-panel hidden" id="historyPanel">
     <h2>History</h2>
     <ul class="history-list" id="historyList"></ul>
@@ -48,6 +54,7 @@
 <script src="js/board/board.js"></script>
 <script src="js/path/paths.js"></script>
 <script src="js/path/filters.js"></script>
+<script src="js/words.js"></script>
 <script src="js/history.js"></script>
 <script src="js/inputs.js"></script>
 <script src="js/requests.js"></script>
