--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
     <input class="hidden-input" id="hiddenInput" type="text" autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false">
   </div>
   <div class="right-panel">
-    <h2>Found Paths</h2>
+    <h2>Found Paths <span class="panel-count hidden" id="pathCount"></span></h2>
     <div class="length-filters hidden" id="lengthFilters"></div>
     <div class="search-filter hidden" id="searchFilter">
       <input type="text" id="searchInput" placeholder="Filter words..." autocomplete="off">
@@ -37,7 +37,7 @@
     </ul>
   </div>
   <div class="words-panel hidden" id="wordsPanel">
-    <h2>Found Words</h2>
+    <h2>Found Words <span class="panel-count hidden" id="wordCount"></span></h2>
     <ul class="word-list" id="wordList">
       <li class="no-paths">No words found yet.</li>
     </ul>
